kubernetes/postgres/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: postgres
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`postgres.skippythesnake.com`)
      kind: Rule
      services:
        - name: postgres
          port: 80
